fix(Layout): fix layout issues

--- a/src/app/modules/layout/header/header.component.css
+++ b/src/app/modules/layout/header/header.component.css
@@ -91,6 +91,7 @@
     /* 48em */
     .navigation-bar {
         display: flex;
+        width: 100vw;
     }
     .navigation-bar .left,
     .navigation-bar .right {
